--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -87,6 +87,12 @@ vrrp_instance {{ name }} {
   {% if instance.advert_int is defined %}
   advert_int {{ instance.advert_int }}
   {% endif %}
+  {% if instance.debug is defined %}
+  debug {{ instance.debug }}
+  {% endif %}
+  {% if instance.dont_track_primary is defined and instance.dont_track_primary | bool%}
+  dont_track_primary
+  {% endif %}
   {% if instance.authentication_password is defined %}
   authentication {
     auth_type PASS
